[package]
name = "short-uuid"
version = "0.1.4"
edition = "2021"
authors = ["Radim Höfer"]
categories = ["data-structures"]
description = "A library to generate and parse short uuids"
documentation = "https://docs.rs/short-uuid"
metadata = "0.1.4"

keywords = ["uuid", "short-uuid"]

license = "MIT"
homepage = "https://github.com/radim10/short-uuid"
readme = "README.md"
repository = "https://github.com/radim10/short-uuid"


[features]
default = ["std"]
std = []

[workspace]
members = ["examples"]

[[bench]]
name = "convert_benchmark"
path = "benches/convert_benchmark.rs"
harness = false


[[bench]]
name = "generate_benchmark"
path = "benches/generate_benchmark.rs"
harness = false

[dependencies.uuid]
version = "1.7.0"
features = ["v4"]

[dev-dependencies]
criterion = "0.5.1"
